--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +11,7 @@
     <nav class="nav">
       <div class="logo">Mesquite Data</div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -47,177 +46,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-<!-- about.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About | Mesquite Data</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <header>
-    <nav class="nav">
-      <div class="logo">Mesquite Data</div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section class="about">
-    <h1>About Mesquite Data</h1>
-    <p>
-      Mesquite Data builds automated Discord-based marketing systems that allow businesses to grow without lifting a finger. We focus on intelligent targeting, ethical outreach, and real lead generation. Our automation tools handle community engagement, messaging, and tracking performance.
-    </p>
-  </section>
-
-  <footer>
-    <p>© 2025 Mesquite Data. All rights reserved.</p>
-  </footer>
-</body>
-</html>
-
-<!-- contact.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Mesquite Data</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <header>
-    <nav class="nav">
-      <div class="logo">Mesquite Data</div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section class="contact">
-    <h1>Contact Us</h1>
-    <p>Ready to scale your marketing with automation? Reach out below.</p>
-
-    <div class="embed-box">
-      <!-- PLACEHOLDER FOR LEAD FORM EMBED -->
-      <p>Your lead form embed goes here.</p>
-    </div>
-  </section>
-
-  <footer>
-    <p>© 2025 Mesquite Data. All rights reserved.</p>
-  </footer>
-</body>
-</html>
-
-<!-- styles.css -->
-<style>
-  :root {
-    --bg: #f5f4f1;
-    --dark: #2a2a29;
-    --accent: #8b5cf6;
-    --accent-light: #c7b3ff;
-  }
-
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    background: var(--bg);
-    color: var(--dark);
-  }
-
-  .nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 40px;
-    background: white;
-    border-bottom: 1px solid #ddd;
-  }
-
-  .nav .logo {
-    font-size: 1.6rem;
-    font-weight: bold;
-    color: var(--accent);
-  }
-
-  .nav-links {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-  }
-
-  .nav-links a {
-    text-decoration: none;
-    color: var(--dark);
-    font-weight: 500;
-  }
-
-  .hero {
-    padding: 120px 40px;
-    text-align: center;
-    background: var(--accent-light);
-    color: var(--dark);
-  }
-
-  .cta {
-    background: var(--accent);
-    padding: 12px 28px;
-    border-radius: 6px;
-    color: white;
-    text-decoration: none;
-    margin-top: 20px;
-    display: inline-block;
-  }
-
-  .features {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    padding: 60px 20px;
-  }
-
-  .feature-card {
-    background: white;
-    padding: 30px;
-    border-radius: 10px;
-    width: 280px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-  }
-
-  .about, .contact {
-    padding: 80px 40px;
-    max-width: 800px;
-    margin: auto;
-  }
-
-  .embed-box {
-    margin-top: 30px;
-    background: white;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-    text-align: center;
-  }
-
-  footer {
-    text-align: center;
-    padding: 30px;
-    margin-top: 40px;
-    background: #eaeaea;
-  }
-</style>
-
-<!-- script.js -->
-<script>
-  console.log("Mesquite Data site loaded successfully.");
-</script>
