--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header>
+  <header class="nav-header">
     <nav class="nav">
       <div class="logo">Mesquite Data</div>
       <ul class="nav-links">
@@ -19,28 +19,46 @@
   </header>
 
   <section class="hero">
-    <h1>Smarter Marketing. Automated Results.</h1>
-    <p>Mesquite Data uses intelligent Discord bot advertising systems to grow your brand effortlessly.</p>
-    <a href="contact.html" class="cta">Get Started</a>
+    <div class="hero-inner">
+      <h1>Automated Marketing, Real Results</h1>
+      <p>Leverage Discord bots to generate high-quality leads and engage communities at scale.</p>
+      <a href="contact.html" class="cta">Get Started</a>
+    </div>
   </section>
 
-  <section class="features">
-    <div class="feature-card">
+  <section class="solutions">
+    <div class="solution-card">
       <h3>Automated Outreach</h3>
-      <p>Our bots connect your business with real leads 24/7.</p>
+      <p>Our bots run 24/7, connecting you to the right people without manual effort.</p>
     </div>
-    <div class="feature-card">
-      <h3>Smart Targeting</h3>
-      <p>We identify communities that want what you offer.</p>
+    <div class="solution-card">
+      <h3>Community Targeting</h3>
+      <p>We identify and engage Discord servers aligned to your niche.</p>
     </div>
-    <div class="feature-card">
-      <h3>Data-Driven Strategy</h3>
-      <p>Modern marketing powered by analytics and automation.</p>
+    <div class="solution-card">
+      <h3>Analytics & Optimization</h3>
+      <p>Track performance, optimize your funnel, and scale smarter.</p>
+    </div>
+  </section>
+
+  <section class="testimonials">
+    <h2>Success Stories</h2>
+    <div class="testimonials-inner">
+      <div class="testimonial">
+        <p><em>“Mesquite Data doubled our monthly leads using smart bot campaigns.”</em></p>
+        <span>- Client A</span>
+      </div>
+      <div class="testimonial">
+        <p><em>“The team automated our Discord outreach and now we don’t worry about it.”</em></p>
+        <span>- Client B</span>
+      </div>
     </div>
   </section>
 
   <footer>
-    <p>© 2025 Mesquite Data. All rights reserved.</p>
+    <div class="footer-inner">
+      <p>© 2025 Mesquite Data. All rights reserved.</p>
+    </div>
   </footer>
 
   <script src="script.js"></script>
