--- a/solutions.html
+++ b/solutions.html
@@ -69,8 +69,7 @@
 
         <div class="contact-form-wrap">
           <div class="embed-box">
-            <iframe aria-label='Contact Us' frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.com/brantborderlands1/form/ContactUs2/formperma/YOStifijp_KRVor3UVyx3SoWFHAgK4jxyXDEWvTH0ZE'></iframe>
-            <p style="margin:0">[Lead Form Embed goes here — paste your provider's embed code in this div]</p>
+            <p style="margin:0"><iframe aria-label='Contact Us' frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.com/brantborderlands1/form/ContactUs2/formperma/YOStifijp_KRVor3UVyx3SoWFHAgK4jxyXDEWvTH0ZE'></iframe></p>
           </div>
 
           <p class="alt-contact">Prefer email? <a href="mailto:contact@mesquitedata.com">contact@mesquitedata.com</a></p>
