--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container hero-grid">
         <div class="hero-copy">
           <h1>Automated marketing that actually converts.</h1>
-          <p class="lead">We deploy intelligent Discord bots that target the right communities, start conversations, and deliver qualified leads — 24/7.</p>
+          <p class="lead">We operate scalable Discord growth systems that run targeted ads in the right communities and generate qualified leads — 24/7</p>
           <div class="hero-ctas">
             <a class="btn btn-primary" href="solutions.html">See Solutions</a>
             <a class="btn btn-outline" href="index.html#about">Our Approach</a>
@@ -57,22 +57,22 @@
     <section class="solutions-teaser">
       <div class="container">
         <h2>What we do</h2>
-        <p class="section-sub">Built for growth — outreach, targeting, optimization.</p>
+        <p class="section-sub">Targeted Discord advertising, done at scale.</p>
 
         <div class="card-grid">
           <article class="card">
             <h3>Automated Outreach</h3>
-            <p>Deploy bots that converse intelligently, qualify prospects, and funnel leads into your stack.</p>
+            <p>Deploy bots that push your business out to the audience you want to reach, no manual work required.</p>
           </article>
 
           <article class="card">
             <h3>Community Targeting</h3>
-            <p>We find and engage the exact Discord servers where your audience already hangs out.</p>
+            <p>We advertise within the Discord communities most relevant to your product.</p>
           </article>
 
           <article class="card">
             <h3>Data & Optimization</h3>
-            <p>Every interaction tracked — we optimize messaging, timing, and channels to maximize ROI.</p>
+            <p>Campaign performance is tracked and refiend to maximize lead quantity and ROI.</p>
           </article>
         </div>
       </div>
@@ -83,12 +83,12 @@
       <div class="container about-grid">
         <div class="about-copy">
           <h2>About Mesquite Data</h2>
-          <p>We are a specialized marketing team that combines automation engineering, behavioral analytics, and ethical outreach to help businesses scale via Discord. Our approach focuses on respecting communities, delivering value first, and converting engaged users into paying customers.</p>
+          <p>We are a specialized marketing team focused on scalable Discord advertising. We design and operate automated systems that place targeted ads inside relevant communities, helping businesses generate qualified leads efficiently and reliably.</p>
 
           <ul class="about-list">
-            <li><strong>Ethical automation:</strong> respectful community-first outreach.</li>
-            <li><strong>Scalable systems:</strong> pipelines you can trust to run reliably.</li>
-            <li><strong>Transparent reporting:</strong> clear KPIs and ROI-driven decisions.</li>
+            <li><strong>Compliant automation:</strong> advertising systems designed to respect platform and community rules.</li>
+            <li><strong>Scalable systems:</strong> reliable infrastructure built to run continuously.</li>
+            <li><strong>Transparent reporting:</strong> clear performance metrics and ROI-focused insights.</li>
           </ul>
 
           <p><a class="btn btn-primary" href="solutions.html">Explore Solutions & Contact</a></p>
@@ -100,7 +100,7 @@
             <div class="avatar">MD</div>
             <div class="profile-copy">
               <h3>Mesquite Data</h3>
-              <p>Founder-led team with deep experience in growth, automation, and community marketing.</p>
+              <p>A dedicated team focused on building the best possible Discord advertising bots.</p>
             </div>
           </div>
         </div>
@@ -113,13 +113,13 @@
         <h2>Results our clients see</h2>
         <div class="testimonial-grid">
           <blockquote class="testimonial">
-            <p>“Mesquite Data increased our qualified lead flow by 3x in two months.”</p>
+            <p>“Mesquite Data increased our lead flow by 3x in two months.”</p>
             <footer>— Growth Manager, SaaS Co.</footer>
           </blockquote>
 
           <blockquote class="testimonial">
-            <p>“They automated our outreach and freed the team to focus on closing.”</p>
-            <footer>— Marketing Lead, E-Commerce</footer>
+            <p>“Their Discord ads helped deliver a surge in preorders for our latest release.”</p>
+            <footer>— Marketing Lead, Wear & Decor</footer>
           </blockquote>
         </div>
       </div>
