--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html">Mesquite Data</a>
+      <a class="logo" href="index.html">
+  <img src="mesquite data logo.gif" alt="Mesquite Data logo" class="logo-img">
+</a>
+
 
       <nav class="main-nav" aria-label="Main navigation">
         <a href="index.html" class="nav-link">Home</a>
