--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html">
-  <img src="mesquite data logo.gif" alt="Mesquite Data logo" class="logo-img">
-</a>
+    <a class="logo" href="index.html">Mesquite Data</a>
 
 
       <nav class="main-nav" aria-label="Main navigation">
